--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2006-02-19  Jost Boekemeier  <jostb@intern>
 	
-	* VERSION, php-java-bridge.spec: Version 3.0.7 released
+	* VERSION, php-java-bridge.spec: Version 3.0.7a released
 	
 2006-02-18  Jost Boekemeier  <jostb@intern>
 
